linked multiple visualizations

--- a/templates/building.html
+++ b/templates/building.html
@@ -48,12 +48,19 @@
 	</div>
 
 	<section class="content container">
+		<div id="v1-floor-nums">
+			<div class="floor-num">Floor 2</div>
+			<div class="floor-num">Floor 3</div>
+			<div class="floor-num">Floor 4</div>
+			<div class="floor-num">Floor 5</div>
+			<div class="floor-num">Terrace</div>
+		</div>
 		<div id="v1">
-			<div class="floor first"></div>
-			<div class="floor second"></div>
-			<div class="floor third"></div>
-			<div class="floor fourth"></div>
-			<div class="floor fifth"></div>
+			<div class="floor first" onclick="DashboardInteraction.moveToFloorViz(1);"></div>
+			<div class="floor second" onclick="DashboardInteraction.moveToFloorViz(2);"></div>
+			<div class="floor third" onclick="DashboardInteraction.moveToFloorViz(3);"></div>
+			<div class="floor fourth" onclick="DashboardInteraction.moveToFloorViz(4);"></div>
+			<div class="floor fifth" onclick="DashboardInteraction.moveToFloorViz(5);"></div>
 		</div>
 		<div id="v2-parent">
 			<div id="v2"></div>
