--- a/web/css/style.css
+++ b/web/css/style.css
@@ -43,6 +43,21 @@ body {
     text-align: center;
 }
 
+#v1-floor-nums {
+    width: 100%;
+    height: 20px;
+    display: flex;
+    flex-direction: row;
+    padding-left: 40px;
+    padding-top: 5px;
+    padding-right: 40px;
+}
+
+.floor-num {
+    flex-grow: 1;
+    color: #fff;
+}
+
 #v1,#v2-parent,#v3-parent {
     width: 100%;
 }
@@ -73,6 +88,7 @@ body {
 .floor {
     height: 100%;
     flex-grow: 1;
+    cursor: pointer;
 }
 
 .axis-label {
