removed dead code

--- a/templates/index.html
+++ b/templates/index.html
@@ -42,20 +42,12 @@
 				<p>Sensor</p>
 			</div>
 		</a>
-		<a style="width: 40%; height: 40%; margin: 20px; text-decoration: none;" href="/oma">
+<!-- 		<a style="width: 40%; height: 40%; margin: 20px; text-decoration: none;" href="/oma">
 			<div class="thumbnail-div" style="background-image: url('images/thumbnail_viz1.jpg');">
 				<p>OMA</p>
 			</div>
 		</a>
-		<!-- <div class="thumbnail-div" style="background-image: url('images/thumbnail_viz2.jpg');">
-			<p>Floor</p>
-		</div>
-		<div class="thumbnail-div" style="background-image: url('images/thumbnail_viz3.jpg');">
-			<p>Sensors</p>
-		</div>
-		<div class="thumbnail-div" style="background-image: url('images/thumbnail_viz1.jpg');">
-			<p>OMA</p>
-		</div> -->
+ -->		
 	</section>
 <script type="text/javascript" src="js/commons.js"></script>
 </body>
